--- a/frontend/ArteNaMao/src/app/modules/produtos/listaprodutos/listaprodutos.component.html
+++ b/frontend/ArteNaMao/src/app/modules/produtos/listaprodutos/listaprodutos.component.html
@@ -30,7 +30,7 @@
             <td  >{{produto.Quantidade}}
             </td>
             <td   class="selectedProfile button">
-              {{produto.Preco}}
+              R${{produto.Preco}}
             </td>
             <td  class="container-butoes">
                 <button class="button-editar" (click)="modalEditarProduto(produto,true)"> <i class="bi bi-pencil-fill"></i></button>
