--- a/frontend/ArteNaMao/src/app/templates/header/header.component.html
+++ b/frontend/ArteNaMao/src/app/templates/header/header.component.html
@@ -2,6 +2,7 @@
     <img src="../../../assets/images/pincel (1).png" alt="ArteNaMao" class="logo">
     <button routerLink="produtos" style="background: none; border: none;">Produtos</button>
     <button routerLink="clientes" style="background: none; border: none;">Clientes</button>
-    <button style="background: none; border: none;">Vendas</button>
-    <button style="background: none; border: none; margin-right:2px ;">Financeiro</button>
+    <button routerLink="vendas" style="background: none; border: none;">Vendas</button>
+    <button  routerLink="financeiro" style="background: none; border: none; margin-right:2px ;">Financeiro</button>
+    <button routerLink="" style="background: none; border: none;"><i class="bi bi-door-open"></i></button>
 </div>
