--- a/frontend/ArteNaMao/src/app/templates/header/header.component.html
+++ b/frontend/ArteNaMao/src/app/templates/header/header.component.html
@@ -4,5 +4,5 @@
     <button routerLink="clientes" style="background: none; border: none;">Clientes</button>
     <button routerLink="vendas" style="background: none; border: none;">Vendas</button>
     <button  routerLink="financeiro" style="background: none; border: none; margin-right:2px ;">Financeiro</button>
-    <button routerLink="" style="background: none; border: none;"><i class="bi bi-door-open"></i></button>
+    <button routerLink="" style="background: none; border: none;"><i class="bi bi-door-open" (click)="logout()"></i></button>
 </div>
