--- a/frontend/ArteNaMao/src/app/modules/produtos/editarproduto/editarproduto.component.html
+++ b/frontend/ArteNaMao/src/app/modules/produtos/editarproduto/editarproduto.component.html
@@ -1,6 +1,6 @@
 <form  [formGroup]="produtoForm" class="master">
     <div class="header">
-        <h2>Dados do Cliente</h2>
+        <h2>Dados do Produto</h2>
     </div>
     <div class="container">
         <div class="double-container">
