--- a/frontend/ArteNaMao/src/app/modules/vendas/listavendas/listavendas.component.html
+++ b/frontend/ArteNaMao/src/app/modules/vendas/listavendas/listavendas.component.html
@@ -34,7 +34,7 @@
             <td  >{{venda.Produto}}
             </td>
             <td   class="selectedProfile button">
-                {{venda.Prazo}}
+                {{formatarData(venda.Prazo)}}
               </td>
             <td   class="selectedProfile button">
               R${{venda.Valor}}
