--- a/frontend/ArteNaMao/src/app/modules/financeiro/listatransacoes/listatransacoes.component.html
+++ b/frontend/ArteNaMao/src/app/modules/financeiro/listatransacoes/listatransacoes.component.html
@@ -1,7 +1,7 @@
 <div class="ggg">
     <div class="first-container">
         <h2>Lista de Transações Realizadas</h2>
-        <button type="button" class="button-add" >Relatórios</button>
+        <button type="button"  (click)="modalVerRelatorio()" class="button-add" >Relatórios</button>
         <button type="button" class="button-add" (click)="modalAdicionarTransacao()">+ Adicionar Despesa</button>
     </div>
    <div class="container">
